ghc-6.2/hslibs/win32/Win32File_stub_ffi.h

extern void* prim_copyFile(char * arg1,char * arg2,int arg3);
extern int access_prim_copyFile_gc_failed(HsPtr);
extern void* access_prim_copyFile_gc_failstring(HsPtr);
extern void* prim_moveFile(char * arg1,char * arg2);
extern int access_prim_moveFile_gc_failed(HsPtr);
extern void* access_prim_moveFile_gc_failstring(HsPtr);
extern void* prim_moveFileEx(char * arg1,char * arg2,DWORD arg3);
extern int access_prim_moveFileEx_gc_failed(HsPtr);
extern void* access_prim_moveFileEx_gc_failstring(HsPtr);
extern void* prim_setCurrentDirectory(char * arg1);
extern int access_prim_setCurrentDirectory_gc_failed(HsPtr);
extern void* access_prim_setCurrentDirectory_gc_failstring(HsPtr);
extern void* prim_createDirectory(char * arg1,void * arg2);
extern int access_prim_createDirectory_gc_failed(HsPtr);
extern void* access_prim_createDirectory_gc_failstring(HsPtr);
extern void* prim_createDirectoryEx(char * arg1,char * arg2,void * arg3);
extern int access_prim_createDirectoryEx_gc_failed(HsPtr);
extern void* access_prim_createDirectoryEx_gc_failstring(HsPtr);
extern void* prim_removeDirectory(char * arg1);
extern int access_prim_removeDirectory_gc_failed(HsPtr);
extern void* access_prim_removeDirectory_gc_failstring(HsPtr);
extern void* prim_getBinaryType(char * arg1);
extern DWORD access_prim_getBinaryType_res1(HsPtr);
extern int access_prim_getBinaryType_gc_failed(HsPtr);
extern void* access_prim_getBinaryType_gc_failstring(HsPtr);
extern void* prim_createFile(char * arg1,UINT arg2,UINT arg3,void * arg4,UINT arg5,UINT arg6,HANDLE arg7);
extern HANDLE access_prim_createFile_res1(HsPtr);
extern int access_prim_createFile_gc_failed(HsPtr);
extern void* access_prim_createFile_gc_failstring(HsPtr);
extern void* prim_closeHandle(HANDLE arg1);
extern int access_prim_closeHandle_gc_failed(HsPtr);
extern void* access_prim_closeHandle_gc_failstring(HsPtr);
extern DWORD prim_getFileType(HANDLE arg1);
extern void* prim_flushFileBuffers(HANDLE arg1);
extern int access_prim_flushFileBuffers_gc_failed(HsPtr);
extern void* access_prim_flushFileBuffers_gc_failstring(HsPtr);
extern void* prim_setEndOfFile(HANDLE arg1);
extern int access_prim_setEndOfFile_gc_failed(HsPtr);
extern void* access_prim_setEndOfFile_gc_failstring(HsPtr);
extern void* prim_setFileAttributes(char * arg1,UINT arg2);
extern int access_prim_setFileAttributes_gc_failed(HsPtr);
extern void* access_prim_setFileAttributes_gc_failstring(HsPtr);