ghc-6.2/hslibs/win32/Win32File.hs


copyFile :: String -> String -> Bool -> IO ()
copyFile gc_arg1 gc_arg2 gc_arg3 =
  (marshall_string_ gc_arg1) >>= \ (arg1) ->
  (marshall_string_ gc_arg2) >>= \ (arg2) ->
  (marshall_bool_ gc_arg3) >>= \ (arg3) ->
  prim_copyFile arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_copyFile_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_copyFile_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_copyFile" prim_copyFile :: Addr -> Addr -> Int -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_copyFile_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_copyFile_gc_failstring :: Addr -> IO (Addr)

moveFile :: String -> String -> IO ()
moveFile gc_arg1 gc_arg2 =
  (marshall_string_ gc_arg1) >>= \ (arg1) ->
  (marshall_string_ gc_arg2) >>= \ (arg2) ->
  prim_moveFile arg1 arg2
  >>= \ gc_result ->
  access_prim_moveFile_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_moveFile_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_moveFile" prim_moveFile :: Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_moveFile_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_moveFile_gc_failstring :: Addr -> IO (Addr)

moveFileEx :: String -> String -> MoveFileFlag -> IO ()
moveFileEx gc_arg1 gc_arg2 arg3 =
  (marshall_string_ gc_arg1) >>= \ (arg1) ->
  (marshall_string_ gc_arg2) >>= \ (arg2) ->
  prim_moveFileEx arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_moveFileEx_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_moveFileEx_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_moveFileEx" prim_moveFileEx :: Addr -> Addr -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_moveFileEx_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_moveFileEx_gc_failstring :: Addr -> IO (Addr)

setCurrentDirectory :: String -> IO ()
setCurrentDirectory gc_arg1 =
  (marshall_string_ gc_arg1) >>= \ (arg1) ->
  prim_setCurrentDirectory arg1
  >>= \ gc_result ->
  access_prim_setCurrentDirectory_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setCurrentDirectory_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_setCurrentDirectory" prim_setCurrentDirectory :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_setCurrentDirectory_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_setCurrentDirectory_gc_failstring :: Addr -> IO (Addr)

createDirectory :: String -> MbLPSECURITY_ATTRIBUTES -> IO ()
createDirectory gc_arg1 arg2 =
  (marshall_string_ gc_arg1) >>= \ (arg1) ->
  (case arg2 of {
      Nothing -> (return (nullAddr));
      (Just arg2) -> (return ((arg2)))
   }) >>= \ (arg2) ->
  prim_createDirectory arg1 arg2
  >>= \ gc_result ->
  access_prim_createDirectory_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createDirectory_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_createDirectory" prim_createDirectory :: Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_createDirectory_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_createDirectory_gc_failstring :: Addr -> IO (Addr)

createDirectoryEx :: String -> String -> MbLPSECURITY_ATTRIBUTES -> IO ()
createDirectoryEx gc_arg1 gc_arg2 arg3 =
  (marshall_string_ gc_arg1) >>= \ (arg1) ->
  (marshall_string_ gc_arg2) >>= \ (arg2) ->
  (case arg3 of {
      Nothing -> (return (nullAddr));
      (Just arg3) -> (return ((arg3)))
   }) >>= \ (arg3) ->
  prim_createDirectoryEx arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_createDirectoryEx_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createDirectoryEx_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_createDirectoryEx" prim_createDirectoryEx :: Addr -> Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_createDirectoryEx_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_createDirectoryEx_gc_failstring :: Addr -> IO (Addr)

removeDirectory :: String -> IO ()
removeDirectory gc_arg1 =
  (marshall_string_ gc_arg1) >>= \ (arg1) ->
  prim_removeDirectory arg1
  >>= \ gc_result ->
  access_prim_removeDirectory_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_removeDirectory_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_removeDirectory" prim_removeDirectory :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_removeDirectory_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_removeDirectory_gc_failstring :: Addr -> IO (Addr)

getBinaryType :: String -> IO BinaryType
getBinaryType gc_arg1 =
  (marshall_string_ gc_arg1) >>= \ (arg1) ->
  prim_getBinaryType arg1
  >>= \ gc_result ->
  access_prim_getBinaryType_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getBinaryType_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getBinaryType_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_getBinaryType" prim_getBinaryType :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_getBinaryType_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_getBinaryType_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_getBinaryType_gc_failstring :: Addr -> IO (Addr)

----------------------------------------------------------------
-- HANDLE operations
----------------------------------------------------------------

createFile :: String -> AccessMode -> ShareMode -> MbLPSECURITY_ATTRIBUTES -> CreateMode -> FileAttributeOrFlag -> MbHANDLE -> IO HANDLE
createFile gc_arg1 arg2 arg3 arg4 arg5 arg6 arg7 =
  (marshall_string_ gc_arg1) >>= \ (arg1) ->
  (case arg4 of {
      Nothing -> (return (nullAddr));
      (Just arg4) -> (return ((arg4)))
   }) >>= \ (arg4) ->
  (case arg7 of {
      Nothing -> (return (nullHANDLE));
      (Just arg7) -> (return ((arg7)))
   }) >>= \ (arg7) ->
  prim_createFile arg1 arg2 arg3 arg4 arg5 arg6 arg7
  >>= \ gc_result ->
  access_prim_createFile_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_createFile_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createFile_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_createFile" prim_createFile :: Addr -> Word32 -> Word32 -> Addr -> Word32 -> Word32 -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_createFile_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_createFile_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_createFile_gc_failstring :: Addr -> IO (Addr)

closeHandle :: HANDLE -> IO ()
closeHandle arg1 =
  prim_closeHandle arg1
  >>= \ gc_result ->
  access_prim_closeHandle_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_closeHandle_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_closeHandle" prim_closeHandle :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_closeHandle_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_closeHandle_gc_failstring :: Addr -> IO (Addr)

getFileType :: HANDLE -> IO FileType
getFileType arg1 =
  prim_getFileType arg1
  >>= \  res1  ->
  (return (res1))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_getFileType" prim_getFileType :: Addr -> IO (Word32)
--Apparently no error code

flushFileBuffers :: HANDLE -> IO ()
flushFileBuffers arg1 =
  prim_flushFileBuffers arg1
  >>= \ gc_result ->
  access_prim_flushFileBuffers_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_flushFileBuffers_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_flushFileBuffers" prim_flushFileBuffers :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_flushFileBuffers_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_flushFileBuffers_gc_failstring :: Addr -> IO (Addr)

setEndOfFile :: HANDLE -> IO ()
setEndOfFile arg1 =
  prim_setEndOfFile arg1
  >>= \ gc_result ->
  access_prim_setEndOfFile_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setEndOfFile_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_setEndOfFile" prim_setEndOfFile :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_setEndOfFile_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_setEndOfFile_gc_failstring :: Addr -> IO (Addr)

setFileAttributes :: String -> FileAttributeOrFlag -> IO ()
setFileAttributes gc_arg1 arg2 =
  (marshall_string_ gc_arg1) >>= \ (arg1) ->
  prim_setFileAttributes arg1 arg2
  >>= \ gc_result ->
  access_prim_setFileAttributes_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setFileAttributes_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_setFileAttributes" prim_setFileAttributes :: Addr -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_setFileAttributes_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_setFileAttributes_gc_failstring :: Addr -> IO (Addr)
